content header & main title

--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
           >
         </div>
       </div>
-      <div class="content"></div>
+      <div class="content">
+        <div class="header">
+          <div class="search">
+            <input type="search" name="search" placeholder="Type A keyword" />
+          </div>
+          <div class="icons">
+            <div class="notification">
+              <i class="fa-regular fa-bell fa-lg"></i>
+            </div>
+            <img src="Assets/avatar.png" alt="avatar" />
+          </div>
+        </div>
+        <div class="main">
+          <h1>Dashboard</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
