--- a/index.html
+++ b/index.html
@@ -64,6 +64,68 @@
         </div>
         <div class="main">
           <h1>Dashboard</h1>
+          <div class="category">
+            <div class="box">
+              <div class="welcome">
+                <div class="text">
+                  <h2>Welcome</h2>
+                  <p>Krifa</p>
+                </div>
+                <div class="image">
+                  <img src="Assets/welcome.png" alt="image" />
+                </div>
+              </div>
+              <img class="user" src="Assets/avatar.png" alt="avatar" />
+              <div class="description">
+                <div class="name">
+                  <p>Krifa Aziz</p>
+                  <span>Developer</span>
+                </div>
+                <div class="projects">
+                  <p>80</p>
+                  <span>Projects</span>
+                </div>
+                <div class="price">
+                  <p>$8500</p>
+                  <span>Earned</span>
+                </div>
+              </div>
+              <div class="button">
+                <a href="profile.html">Profile</a>
+              </div>
+            </div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">hello</div>
+            <div class="box">
+              hello <br />
+              <br />
+              <br />ggg <br />
+              <br />
+              <br />ggg <br />
+              <br />
+              <br />ggg
+            </div>
+            <div class="box">
+              hello <br />
+              <br />
+              <br />ggg
+            </div>
+            <div class="box">
+              hello <br />
+              <br />
+              <br />ggg
+            </div>
+            <div class="box">
+              hello <br />
+              <br />
+              <br />ggg
+            </div>
+          </div>
         </div>
       </div>
     </div>
