Quick Draft box

--- a/index.html
+++ b/index.html
@@ -94,7 +94,17 @@
                 <a href="profile.html">Profile</a>
               </div>
             </div>
-            <div class="box">hello</div>
+            <div class="draft">
+              <h2>Quick Draft</h2>
+              <p>Write A Draft For Your Ideas</p>
+              <form>
+                <input type="text" name="title" placeholder="Title" />
+                <textarea name="Thought" placeholder="Your Thought"></textarea>
+              </form>
+              <div class="button">
+                <a href="#">Save</a>
+              </div>
+            </div>
             <div class="box">hello</div>
             <div class="box">hello</div>
             <div class="box">hello</div>
