--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="box">
               <div class="welcome">
                 <div class="text">
-                  <h2>Welcome</h2>
-                  <p>Krifa</p>
+                  <h2 class="title">Welcome</h2>
+                  <p class="under-title">Krifa</p>
                 </div>
                 <div class="image">
                   <img src="Assets/welcome.png" alt="image" />
@@ -95,8 +95,8 @@
               </div>
             </div>
             <div class="draft">
-              <h2>Quick Draft</h2>
-              <p>Write A Draft For Your Ideas</p>
+              <h2 class="title">Quick Draft</h2>
+              <p class="under-title">Write A Draft For Your Ideas</p>
               <form>
                 <input type="text" name="title" placeholder="Title" />
                 <textarea name="Thought" placeholder="Your Thought"></textarea>
@@ -105,7 +105,40 @@
                 <a href="#">Save</a>
               </div>
             </div>
-            <div class="box">hello</div>
+            <div class="targets">
+              <h2 class="title">Yearly Targets</h2>
+              <p class="under-title">Targets Of The Year</p>
+              <div class="money">
+                <i class="fa-solid fa-dollar-sign fa-lg c-blue"></i>
+                <div class="col">
+                  <span>Money</span>
+                  <p>$20.000</p>
+                  <div class="prog-holder">
+                    <div class="prog" style="width: 80%" prog-data="80%"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="projects">
+                <i class="fa-solid fa-code fa-lg c-orange"></i>
+                <div class="col">
+                  <span>Projects</span>
+                  <p>24</p>
+                  <div class="prog-holder">
+                    <div class="prog" style="width: 55%" prog-data="55%"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="team">
+                <i class="fa-solid fa-user fa-lg c-green"></i>
+                <div class="col">
+                  <span>Projects</span>
+                  <p>12</p>
+                  <div class="prog-holder">
+                    <div class="prog" style="width: 75%" prog-data="75%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="box">hello</div>
             <div class="box">hello</div>
             <div class="box">hello</div>
