--- a/index.html
+++ b/index.html
@@ -139,35 +139,44 @@
                 </div>
               </div>
             </div>
-            <div class="box">hello</div>
-            <div class="box">hello</div>
-            <div class="box">hello</div>
-            <div class="box">hello</div>
-            <div class="box">hello</div>
-            <div class="box">
-              hello <br />
-              <br />
-              <br />ggg <br />
-              <br />
-              <br />ggg <br />
-              <br />
-              <br />ggg
+            <div class="tickets">
+              <h2 class="title">Tickets Statistics</h2>
+              <p class="under-title">Everything About Support Tickets</p>
+              <div class="statistic">
+                <div class="col">
+                  <i
+                    class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"
+                  ></i>
+                  <p>2500</p>
+                  <span>Total</span>
+                </div>
+                <div class="col">
+                  <i class="fa-solid fa-spinner fa-2x mb-10 c-blue"></i>
+                  <p>500</p>
+                  <span>Pending</span>
+                </div>
+                <div class="col">
+                  <i class="fa-regular fa-circle-check fa-2x mb-10 c-green"></i>
+                  <p>1900</p>
+                  <span>Closed</span>
+                </div>
+                <div class="col">
+                  <i
+                    class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-red"
+                  ></i>
+                  <p>100</p>
+                  <span>Deleted</span>
+                </div>
+              </div>
             </div>
-            <div class="box">
-              hello <br />
-              <br />
-              <br />ggg
-            </div>
-            <div class="box">
-              hello <br />
-              <br />
-              <br />ggg
-            </div>
-            <div class="box">
-              hello <br />
-              <br />
-              <br />ggg
-            </div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
           </div>
         </div>
       </div>
