--- a/index.html
+++ b/index.html
@@ -169,10 +169,185 @@
                 </div>
               </div>
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="news">
+              <h2 class="title">Latest News</h2>
+              <div class="col">
+                <img src="Assets/news-01.png" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">Created SASS Section</h3>
+                    <p class="under-title">New SASS Examples & Tutorials</p>
+                  </div>
+                  <div class="details">3 Days Ago</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/news-02.png" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">Changed The Design</h3>
+                    <p class="under-title">A Brand New Website Design</p>
+                  </div>
+                  <div class="details">5 Days Ago</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/news-03.png" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">Team Increased</h3>
+                    <p class="under-title">3 Developers Joined The Team</p>
+                  </div>
+                  <div class="details">7 Days Ago</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/news-04.png" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">Added Payment Gateway</h3>
+                    <p class="under-title">Many New Payment Gateways Added</p>
+                  </div>
+                  <div class="details">9 Days Ago</div>
+                </div>
+              </div>
+            </div>
+            <div class="tasks">
+              <h2 class="title">Latest Tasks</h2>
+              <div class="col">
+                <div class="text">
+                  <h3 class="semi-title">Record One New Video</h3>
+                  <p class="under-title">Record Python Create Exe Project</p>
+                </div>
+                <i class="fa-regular fa-trash-can delete"></i>
+              </div>
+              <div class="col">
+                <div class="text">
+                  <h3 class="semi-title">Write Article</h3>
+                  <p class="under-title">
+                    Write Low Level vs High Level Languages
+                  </p>
+                </div>
+                <i class="fa-regular fa-trash-can delete"></i>
+              </div>
+              <div class="col">
+                <div class="text">
+                  <h3 class="semi-title">Finish Project</h3>
+                  <p class="under-title">Publish Academy Programming Project</p>
+                </div>
+                <i class="fa-regular fa-trash-can delete"></i>
+              </div>
+              <div class="col">
+                <div class="text">
+                  <h3 class="semi-title">Attend The Meeting</h3>
+                  <p class="under-title">
+                    Attend The Project Business Analysis Meeting
+                  </p>
+                </div>
+                <i class="fa-regular fa-trash-can delete"></i>
+              </div>
+              <div class="col">
+                <div class="text">
+                  <h3 class="semi-title">Finish Lesson</h3>
+                  <p class="under-title">Finish Teaching Flex Box</p>
+                </div>
+                <i class="fa-regular fa-trash-can delete"></i>
+              </div>
+            </div>
+            <div class="search">
+              <h2 class="title">Tickets Statistics</h2>
+              <div class="text">
+                <p class="under-title">Keyword</p>
+                <p class="under-title">Search Count</p>
+              </div>
+              <div class="col">
+                <p>Programming</p>
+                <div class="details">220</div>
+              </div>
+              <div class="col">
+                <p>JavaScript</p>
+                <div class="details">180</div>
+              </div>
+              <div class="col">
+                <p>PHP</p>
+                <div class="details">160</div>
+              </div>
+              <div class="col">
+                <p>Code</p>
+                <div class="details">145</div>
+              </div>
+              <div class="col">
+                <p>Design</p>
+                <div class="details">110</div>
+              </div>
+              <div class="col">
+                <p>Logic</p>
+                <div class="details">95</div>
+              </div>
+            </div>
+            <div class="uploads">
+              <h2 class="title">Latest Uploads</h2>
+              <div class="col">
+                <img src="Assets/pdf.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">my-file.pdf</h3>
+                    <p class="under-title">Krifa</p>
+                  </div>
+                  <div class="details">2.9mb</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/avi.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">My-Video-File.avi</h3>
+                    <p class="under-title">Admin</p>
+                  </div>
+                  <div class="details">4.9mb</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/psd.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">My-Psd-File.pdf</h3>
+                    <p class="under-title">Osama</p>
+                  </div>
+                  <div class="details">4.5mb</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/zip.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">My-Zip-File.pdf</h3>
+                    <p class="under-title">User</p>
+                  </div>
+                  <div class="details">8.9mb</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/dll.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">My-DLL-File.pdf</h3>
+                    <p class="under-title">Admin</p>
+                  </div>
+                  <div class="details">4.9mb</div>
+                </div>
+              </div>
+              <div class="col">
+                <img src="Assets/eps.svg" alt="image" />
+                <div class="info">
+                  <div class="text">
+                    <h3 class="semi-title">My-Eps-File.pdf</h3>
+                    <p class="under-title">Designer</p>
+                  </div>
+                  <div class="details">8.9mb</div>
+                </div>
+              </div>
+            </div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
