Progress & reminders boxs

--- a/index.html
+++ b/index.html
@@ -348,8 +348,48 @@
                 </div>
               </div>
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="progress">
+              <h2 class="title">Last Project Progress</h2>
+              <img src="Assets/project.png" alt="bg-image" />
+              <ul>
+                <li>Got The Project</li>
+                <li>Started The Project</li>
+                <li>The Project About To Finish</li>
+                <li>Test The Project</li>
+                <li>Finish The Project & Get Money</li>
+              </ul>
+            </div>
+            <div class="reminders">
+              <h2 class="title">Reminders</h2>
+              <div class="col">
+                <span></span>
+                <div class="text">
+                  <h3 class="semi-title">Check My Tasks List</h3>
+                  <p class="under-title">28/09/2022 - 12:00am</p>
+                </div>
+              </div>
+              <div class="col">
+                <span></span>
+                <div class="text">
+                  <h3 class="semi-title">Check My Projects</h3>
+                  <p class="under-title">26/10/2022 - 12:00am</p>
+                </div>
+              </div>
+              <div class="col">
+                <span></span>
+                <div class="text">
+                  <h3 class="semi-title">Call All My Clients</h3>
+                  <p class="under-title">05/11/2022 - 12:00am</p>
+                </div>
+              </div>
+              <div class="col">
+                <span></span>
+                <div class="text">
+                  <h3 class="semi-title">Finish The Development Workshop</h3>
+                  <p class="under-title">20/12/2022 - 12:00am</p>
+                </div>
+              </div>
+            </div>
             <div class="box"></div>
             <div class="box"></div>
           </div>
