Add the level-prog and fix some issues

--- a/profile.html
+++ b/profile.html
@@ -69,6 +69,7 @@
               <img src="Assets/avatar.png" alt="user" />
               <h3>Krifa Aziz</h3>
               <span class="level">Level 20</span>
+              <span class="level-prog"></span>
               <div class="rate">
                 <i class="fa-solid fa-star c-orange fs-13"></i>
                 <i class="fa-solid fa-star c-orange fs-13"></i>
