--- a/settings.html
+++ b/settings.html
@@ -59,7 +59,9 @@
             <div class="notification">
               <i class="fa-regular fa-bell fa-lg"></i>
             </div>
-            <img src="Assets/avatar.png" alt="avatar" />
+            <a href="profile.html"
+              ><img src="Assets/avatar.png" alt="avatar"
+            /></a>
           </div>
         </div>
         <div class="main">
