--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,7 @@
           <div class="profile-info box">
             <div class="user">
               <img src="Assets/avatar.png" alt="user" />
-              <h3>Krifa Aziz</h3>
+              <h3>Krifa Mohamed Aziz</h3>
               <span class="level">Level 20</span>
               <span class="level-prog"></span>
               <div class="rate">
