--- a/friends.html
+++ b/friends.html
@@ -37,16 +37,16 @@
             ><i class="fa-solid fa-graduation-cap fa-fw"></i
             ><span>Courses</span></a
           >
-          <a href="friends.html"
+          <a class="active" href="friends.html"
             ><i class="fa-regular fa-circle-user fa-fw"></i
             ><span>Friends</span></a
           >
-          <a href="plans.html"
-            ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
-          >
           <a href="files.html"
             ><i class="fa-regular fa-credit-card fa-fw"></i
-            ><span>Plans</span></a
+            ><span>Files</span></a
+          >
+          <a href="plans.html"
+            ><i class="fa-regular fa-file fa-fw"></i><span>Plans</span></a
           >
         </div>
       </div>
