Fix sidebar icon issue

--- a/files.html
+++ b/files.html
@@ -19,7 +19,7 @@
       <div class="sidebar">
         <h3 class="title">Krifa</h3>
         <div class="navbar">
-          <a class="active" href="index.html">
+          <a href="index.html">
             <i class="fa-regular fa-chart-bar fa-fw"></i
             ><span>Dashboard</span></a
           >
@@ -41,12 +41,11 @@
             ><i class="fa-regular fa-circle-user fa-fw"></i
             ><span>Friends</span></a
           >
-          <a class="active" href="files.html"
-            ><i class="fa-regular fa-credit-card fa-fw"></i
-            ><span>Files</span></a
+          <a class="active" href="files.html">
+            <i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
           >
-          <a href="plans.html"
-            ><i class="fa-regular fa-file fa-fw"></i><span>Plans</span></a
+          <a href="plans.html">
+            <i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a
           >
         </div>
       </div>
