--- a/profile.html
+++ b/profile.html
@@ -41,12 +41,11 @@
             ><i class="fa-regular fa-circle-user fa-fw"></i
             ><span>Friends</span></a
           >
-          <a href="plans.html"
-            ><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
+          <a href="files.html">
+            <i class="fa-regular fa-file fa-fw"></i><span>Files</span></a
           >
-          <a href="files.html"
-            ><i class="fa-regular fa-credit-card fa-fw"></i
-            ><span>Plans</span></a
+          <a href="plans.html">
+            <i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a
           >
         </div>
       </div>
